[tool.poetry]
name = "course-3-slidzenmaxim"
version = "0.1.0"
description = ""
authors = ["MaxSlidzen <slidzon94@gmail.com>"]
readme = "README.md"
packages = [{include = "course_3_slidzenmaxim"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
